@@ -27,17 +27,73 @@
 
 namespace pqxx
 {
+/// Marker: "stream from table."
+struct from_table_t
+{
+} const from_table;
+
+/// Marker: "stream from query."
+struct from_query_t
+{
+} const from_query;
+
 /// Efficiently pull data directly out of a table.
+/** Retrieving data this way has a bit more startup overhead than executing a
+ * regular query does, but given enough rows of data, it's likely to be faster.
+ *
+ * Opening a stream does put the connection in a special state, so you won't be
+ * able to do many other things with the connection or the transaction while
+ * the stream is open.
+ *
+ * Usually you'll want the @c stream convenience wrapper in transaction_base,
+ * so you don't need to deal with this class directly.
+ */
 class PQXX_LIBEXPORT stream_from : internal::transactionfocus
 {
 public:
-  stream_from(transaction_base &, std::string_view table_name);
-  template<typename Columns>
-  stream_from(
-    transaction_base &, std::string_view table_name, Columns const &columns);
+  /// Execute query, and stream over the results.
+  /** The query can be a SELECT query or a VALUES query; or it can be an
+   * UPDATE, INSERT, or DELETE with a RETURNING clause.
+   *
+   * The query is executed as part of a COPY statement, so there are additional
+   * restrictions on what kind of query you can use here.  See the PostgreSQL
+   * documentation for the COPY command:
+   *
+   *     https://www.postgresql.org/docs/current/sql-copy.html
+   */
+  stream_from(transaction_base &, from_query_t, std::string_view query);
+
+  /// Stream all rows in table, all columns.
+  stream_from(transaction_base &, from_table_t, std::string_view table);
+
+  /// Stream given columns from all rows in table.
   template<typename Iter>
   stream_from(
-    transaction_base &, std::string_view table_name, Iter columns_begin,
+    transaction_base &, from_table_t, std::string_view table,
+    Iter columns_begin, Iter columns_end);
+
+  /// Stream given columns from all rows in table.
+  template<typename Columns>
+  stream_from(
+    transaction_base &tx, from_table_t, std::string_view table,
+    Columns const &columns);
+
+  /// @deprecated Use the @c from_table_t overload instead.
+  stream_from(transaction_base &tx, std::string_view table) :
+          stream_from{tx, from_table, table}
+  {}
+
+  /// @deprecated Use the @c from_table_t overload instead.
+  template<typename Columns>
+  stream_from(
+    transaction_base &tx, std::string_view table, Columns const &columns) :
+          stream_from{tx, from_table, table, columns}
+  {}
+
+  /// @deprecated Use the @c from_table_t overload instead.
+  template<typename Iter>
+  stream_from(
+    transaction_base &, std::string_view table, Iter columns_begin,
     Iter columns_end);
 
   ~stream_from() noexcept;
@@ -72,16 +128,15 @@ public:
   }
 
 private:
+  stream_from(
+    transaction_base &tx, std::string_view table, std::string &&columns,
+    from_table_t);
+
   internal::encoding_group m_copy_encoding =
     internal::encoding_group::MONOBYTE;
   std::string m_current_line;
   bool m_finished = false;
   bool m_retry_line = false;
-
-  void set_up(transaction_base &, std::string_view table_name);
-  void set_up(
-    transaction_base &, std::string_view table_name,
-    std::string const &columns);
 
   void close();
 
@@ -110,20 +165,20 @@ private:
 
 template<typename Columns>
 inline stream_from::stream_from(
-  transaction_base &tb, std::string_view table_name, Columns const &columns) :
-        stream_from{tb, table_name, std::begin(columns), std::end(columns)}
+  transaction_base &tb, from_table_t, std::string_view table_name,
+  Columns const &columns) :
+        stream_from{tb, from_table, table_name, std::begin(columns),
+                    std::end(columns)}
 {}
 
 
 template<typename Iter>
 inline stream_from::stream_from(
-  transaction_base &tb, std::string_view table_name, Iter columns_begin,
-  Iter columns_end) :
-        namedclass{"stream_from", table_name},
-        transactionfocus{tb}
-{
-  set_up(tb, table_name, separated_list(",", columns_begin, columns_end));
-}
+  transaction_base &tx, from_table_t, std::string_view table,
+  Iter columns_begin, Iter columns_end) :
+        stream_from{tx, table, separated_list(",", columns_begin, columns_end),
+                    from_table}
+{}
 
 
 template<typename Tuple> stream_from &stream_from::operator>>(Tuple &t)
