@@ -1,7 +1,9 @@
 7.0.2
  - New query function: `query_value`, queries and converts a single value.
+ - Query tuples straight into `std::tuple` using `transaction::stream()`!
  - A `stream_from` stream can now be iterated.
- - Query tuples straight into `std::tuple` using `transaction::stream_from()`!
+ - And, `stream_from` now supports more or less arbitrary queries.
+ - The table name in `stream_from` is now escaped.
 7.0.1
  - Windows build fixes.
  - Documentation for writing your own string conversions.
